<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textSize="30sp"
        android:text="@string/app_name"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_username"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            />

        <EditText
            android:id="@+id/edit_pwd"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/pwd"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_marginTop="20dp"
            />

        <Button
            android:id="@+id/button_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_marginTop="50dp"
            />

    </LinearLayout>
</RelativeLayout>
